# AQB

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EXTERNAL_API_IMPLEMENTATION.md  FETCHER_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_cache.py  test_external_demo.py
.github/workflows/: cd.yml  ci.yml  model-retrain.yml
.sisyphus/: continuation-count.json  ultrawork-state.json
.sisyphus/plans/: iftb-work-plan-v1.1.md
docs/: LLM_ANALYZER.md  LLM_ANALYZER_QUICK_REFERENCE.md  cache_module.md  data_fetcher.md  decision_engine.md  executor_module.md  executor_quick_reference.md  external_data_api.md  logging.md  logging_quick_reference.md  storage_layer.md  storage_quick_reference.md  telegram_collector.md
docs/implementation/: CACHE_IMPLEMENTATION.md  LLM_ANALYZER_IMPLEMENTATION_SUMMARY.md  STORAGE_IMPLEMENTATION.md
docs/operations/: RUNBOOK.md
docs/reference/: DECISION_ENGINE_QUICK_REFERENCE.md  EXTERNAL_API_QUICK_REFERENCE.md
examples/: decision_engine_usage.py  fetcher_examples.py  llm_analyzer_example.py  logging_example.py  storage_example.py  telegram_example.py  test_cache.py  test_executor.py  test_external_demo.py
grafana/dashboards/: iftb-trading.json
grafana/provisioning/dashboards/: default.yml
migrations/: 001_initial_schema.sql  002_analysis_tables.sql  003_risk_tables.sql  004_market_data_tables.sql  QUICKSTART.md  README.md  SCHEMA_REFERENCE.md  run_migrations.py  run_migrations.sh
prometheus/: prometheus.yml
scripts/: validate_fetcher.py  validate_llm_analyzer.py  validate_paper_trading.py
src/iftb/: main.py
src/iftb/analysis/: __init__.py  indicators.py  llm_analyzer.py  ml_model.py
src/iftb/backtest/: __init__.py  engine.py  report.py
src/iftb/config/: __init__.py  constants.py  settings.py
src/iftb/data/: README.md  __init__.py  cache.py  external.py  fetcher.py  storage.py  telegram.py  validation.py  websocket.py
src/iftb/monitoring/: __init__.py  metrics.py
src/iftb/trading/: __init__.py  decision_engine.py  executor.py
src/iftb/utils/: __init__.py  logger.py
tests/: conftest.py  test_integration.py  test_logger.py  test_storage.py
tests/data/: test_fetcher.py
tests/e2e/: __init__.py  test_backtest.py
tests/integration/: __init__.py  test_data_pipeline.py
tests/unit/: __init__.py  test_decision_engine.py  test_executor.py  test_indicators.py  test_llm_analyzer.py  test_telegram.py
