[project]
name = "iftb"
version = "0.1.0"
description = "Intelligent Futures Trading Bot - Advanced algorithmic trading system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "IFTB Team" }
]
keywords = ["trading", "futures", "bot", "algorithmic-trading", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Async
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "redis>=5.0.0",
    "orjson>=3.9.0",

    # ML
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.5.0",
    "joblib>=1.3.0",

    # Technical Analysis
    "pandas-ta>=0.3.14b",

    # Trading
    "ccxt>=4.2.0",

    # Telegram
    "pyrogram>=2.0.0",
    "tgcrypto>=1.2.0",

    # LLM
    "anthropic>=0.18.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",

    # Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",

    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Type stubs
    "types-redis>=4.6.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
iftb = "iftb.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iftb"]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN401",  # dynamically-typed-expression (Any)
    "ANN204",  # missing-return-type-special-method
    "ANN201",  # missing-return-type-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN001",  # missing-type-function-argument
    "ANN003",  # missing-type-kwargs
    "S101",    # assert-used (for pytest)
    "PLR0913", # too-many-arguments
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "PLR0911", # too-many-return-statements
    "PLR2004", # magic-value-comparison
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "TRY300",  # try-consider-else
    "TRY301",  # raise-within-try
    "ERA001",  # commented-out-code
    "DTZ003",  # call-datetime-utcnow
    "DTZ005",  # call-datetime-now-without-tzinfo
    "DTZ001",  # call-datetime-without-tzinfo
    "DTZ006",  # call-datetime-fromtimestamp
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    "PLC0415", # import-outside-toplevel
    "PTH123",  # builtin-open
    "RET504",  # unnecessary-assign
    "SIM102",  # collapsible-if
    "SIM105",  # suppressible-exception
    "N806",    # non-lowercase-variable-in-function
    "RUF022",  # unsorted-dunder-all
    "E501",    # line-too-long (handled by formatter)
    "F841",    # unused-variable
    "N803",    # invalid-argument-name
    "B904",    # raise-without-from-inside-except
    "B905",    # zip-without-explicit-strict
    "S311",    # suspicious-non-cryptographic-random
    "RUF012",  # mutable-class-default
    "RUF059",  # unused-unpacked-variable
    "PLR1722", # sys-exit-alias
    "A004",    # builtin-import-shadowing
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM103",  # return-bool-condition-directly
    "PT006",   # pytest-parametrize-names-wrong-type
    "PLW0603", # global-statement
    "F821",    # undefined-name (false positive in some cases)
    "ASYNC230", # blocking-open-call-in-async-function
    "ANN002",  # missing-type-args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert-used
    "S106",    # hardcoded-password-argument
    "S108",    # hardcoded-temp-file
    "S311",    # suspicious-non-cryptographic-random-usage
    "ANN",     # flake8-annotations
    "F841",    # unused-variable
    "PT011",   # pytest-raises-too-broad
    "PLW0603", # global-statement
    "B904",    # raise-without-from-inside-except
    "RUF012",  # mutable-class-default
    "RUF059",  # unused-unpacked-variable
    "PLR2004", # magic-value-comparison
    "S105",    # hardcoded-password-string
    "S106",    # hardcoded-password-func-arg
]
"__init__.py" = [
    "F401",    # unused-import
]
"examples/**/*.py" = [
    "F841",    # unused-variable
    "S106",    # hardcoded-password
    "S108",    # hardcoded-temp-file
    "ANN",     # annotations
    "T201",    # print
    "PLR2004", # magic-value
]
"scripts/**/*.py" = [
    "F841",    # unused-variable
    "S106",    # hardcoded-password
    "ANN",     # annotations
    "T201",    # print
]

[tool.ruff.lint.isort]
known-first-party = ["iftb"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pyrogram.*",
    "pandas_ta.*",
    "optuna.*",
    "xgboost.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=iftb",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "live: Tests requiring live API connection",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/iftb"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
